<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="veg"
        android:summaryOff="Not vegetarian"
        android:summaryOn="Vegetarian"
        android:title="@string/veg_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="egg"
        android:summaryOff="No egg"
        android:summaryOn="Egg acceptable"
        android:title="@string/egg_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="gluten"
        android:summaryOff="No gluten"
        android:summaryOn="Gluten acceptable"
        android:title="@string/gluten_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="peanut"
        android:summaryOff="No peanut"
        android:summaryOn="Peanut acceptable"
        android:title="@string/peanut_title"/>
    <ListPreference
        android:defaultValue="25"
        android:entries="@array/pref_num_option_labels"
        android:entryValues="@array/pref_num_option_values"
        android:key="num"
        android:title="@string/list_title"/>
</PreferenceScreen>